Fix spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,8 +151,9 @@ ul li:hover ul.dropdown {
 
 .textBody {
   display: flex;
-  width: 50%;
-  margin-left: 25%;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
   height: 100%;
   font-size: large;
 }
@@ -169,16 +170,23 @@ ul li:hover ul.dropdown {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   font-size: small;
   margin-top: 30px;
   margin-bottom: 6rem;
-  margin-left: 35%;
+}
+
+.textContent {
+  width: 50%;
 }
 
 .videoBody {
   gap: 3rem;
   margin-top: 3rem;
-  margin-left: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .videoBody iframe {
@@ -186,15 +194,22 @@ ul li:hover ul.dropdown {
 }
 
 .articlesBody {
-  margin-left: 30%;
   color: lightblue;
   font-size: x-large;
   text-decoration: underline;
   margin-top: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .booksBody {
-  margin-left: 40%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .bookItem {
